--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=libreria-alura
-spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:postgresql://localhost/alura_libreria
+spring.datasource.username=postgres
+spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
-
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -12,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.jpa.format-sql=true
+
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate=DEBUG
